--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" type="text/css" href="estilo.css" media="screen">
-<link rel="shortcut icon" href="seuavatar" type="image/x-icon">
+<link rel="shortcut icon" href="Screenshot_20230321-082549_WhatsApp.jpg" type="image/x-icon">
 <title>suapagina</title>
 </head>
 <body>
@@ -9,7 +9,7 @@
 <div>
 <table>
 <tr>
-<td><center><img class="img3" src="seuavatar"></center></td>
+<td><center><img class="img3" src="Screenshot_20230321-082549_WhatsApp.jpg"></center></td>
 <td>
 <p>sua apresentação</td>
 </tr>
