--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <tr>
                         <td><center><img class="img3" src="Screenshot_20230321-082549_WhatsApp.jpg"></center></td>
                         <td>
-                            <p>sua apresentação</td>
+                            <p>opa de boa?</td>
                     </tr>
                 </table>
             </div>
@@ -21,7 +21,7 @@
     <div class="linha" align="right">
             <a href="mailto: seuemail@escola.pr.gov.br"><img src="email.png"
 width="30px"></a>
-        <a href="+55 seu telefone"><img src="fone.png" width="30px"></a>
+        <a href="+44 999578607"><img src="fone.png" width="30px"></a>
     </div>
 
     <body>
@@ -34,11 +34,11 @@ width="30px"></a>
             </table>
         </div>
         <div>
-            <footer class="linha"> Desenvolvido por Seu nome</footer>
+            <footer class="linha"> Desenvolvido por: Gabriel Rufino</footer>
         </div>
     </center>
     </body>
         <div class="lista">
-            <p></p> // poema/mensagem
+            <p></p> // aprenda com seus erros
         </div>
 </html>
