--- a/index.html
+++ b/index.html
@@ -1,44 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport"  content="width=decive-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="estilo.css" media="screen">
-        <link rel="shortcut icon" href="Screenshot_20230321-082549_WhatsApp.jpg" type="image/x-icon">
-        <title>suapagina</title>
-    </head>
-    <body>
-        <header class="cabeçalho">
-            <img class="cabeçalho-imagem" src="alurastart logo.png" alt="logo da alura start">
-            <ul class="cabeçalho-lista">
-                <li class="cabeçalho-lista-item">Escola</li>
-                <li class="cabçalho-lista-item">Estudante</li>
-
-            </ul>    
-        </header>
-
-    <div class="linha" align="right">
-            <a href="mailto: seuemail@escola.pr.gov.br"><img src="email.png"
-width="30px"></a>
-        <a href="+44 999578607"><img src="fone.png" width="30px"></a>
-    </div>
-
-    <body>
-    <center>
-        <div class="itens">
-            <table border="2" CELLSPACING=4 CELLPADDING=4>
-                <tr> //linha
-                    <td> </td> //colunas
-                </tr>
-            </table>
-        </div>
-        <div>
-            <footer class="linha"> Desenvolvido por: Gabriel Rufino</footer>
-        </div>
-    </center>
-    </body>
-        <div class="lista">
-            <p></p> // aprenda com seus erros
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Imagem sla</h1>
+    
+</body>
 </html>
