--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Imagem sla</h1>
-    
+    <ul>
+        <li>Escola</li>
+        <li>Estudante</li>
+    </ul>
 </body>
 </html>
