--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Imagem sla</h1>
-    <ul>
-        <li>Escola</li>
-        <li>Estudante</li>
-    </ul>
+    <header>
+        <h1>Imagem sla</h1>
+        <ul>
+            <li>Escola</li>
+            <li>Estudante</li>
+        </ul>
+    </header>
+
 </body>
 </html>
