--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Imagem sla</h1>
+        <img src="" alt="">
         <ul>
             <li>Escola</li>
             <li>Estudante</li>
