--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="gabriel escola.jpg" alt="start nesse trem">
         <ul>
             <li>Escola</li>
             <li>Estudante</li>
