--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <header>
+    <header class="cabec">
         <img class="cabec-imagem" src="gabriel escola.jpg" alt="start nesse trem">
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+        <ul class="cabec-lista">
+            <li class="cabec-lista-item">Escola</li>
+            <li class="cabec-lista-item">Estudante</li>
         </ul>
     </header>
 
