--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <header class="cabec">
         <img class="cabec-imagem" src="gabriel escola.jpg" alt="start nesse trem">
@@ -15,6 +16,12 @@
             <li class="cabec-lista-item">Estudante</li>
         </ul>
     </header>
+    <section class="escola">
+        <h2 class="escola-titulo">Sobre a Escola</h2>
+        <p class="escola-texto-um"></p>
+        <p class="escola-texto-dois"></p>
+    </section>
 
 </body>
+
 </html>
