--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h2 class="escola-titulo">Sobre a Escola</h2>
         <p class="escola-texto-um"></p>
         <p class="escola-texto-dois"></p>
+        <img class="escola-imagem" src="sonic-teste.png" alt="sonic the hedgehog.">
     </section>
 
 </body>
