--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         </ul>
     </header>
     <section class="escola">
-        <h2 class="escola-titulo">Sobre a Escola</h2>
-        <p class="escola-texto-um"></p>
-        <p class="escola-texto-dois"></p>
-        <img class="escola-imagem" src="sonic-teste.png" alt="sonic the hedgehog.">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">Acho que foi um</p>
+            <p class="escola-texto-dois">Provavelmente foi dois</p>
+           
+        </div>
+ <img class="escola-imagem" src="sonic-teste.png" alt="sonic the hedgehog.">
     </section>
 
 </body>
