--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </div>
         <img class="escola-imagem" src="sonic-teste.png" alt="sonic the hedgehog.">
     </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    </section>
 </body>
 
 </html>
