--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <img src=""
+   
+   
+   
     </section>
 </body>
 
