--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <img src=""
+        <img src="izuku.jpg" alt="tava animado na hora">
    
    
    
