--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-   
+        <h3>Gabriel</h3>
    
    
     </section>
