--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-        <h3>Gabriel</h3>
-   
-   
+        <h3 class="estudante-nome">Gabriel</h3>
+        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+        <img class="estudante-icone" src="ring.jpg" alt="RING!">
+        
     </section>
 </body>
 </html>
