--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-        <h3 class="estudante-nome">Gabriel</h3>
-        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
-        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
-        <img class="estudante-icone" src="ring.jpg" alt="RING!">
-        
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+            <h3 class="estudante-nome">Gabriel</h3>
+            <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+            <img class="estudante-icone" src="ring.jpg" alt="RING!">
+        </div>
     </section>
 </body>
-</html>
+</html> 
