--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
         <div class="estudante-div">
             <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
             <h3 class="estudante-nome">Gabriel</h3>
@@ -33,6 +34,7 @@
             <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
             <img class="estudante-icone" src="ring.jpg" alt="RING!">
         </div>
+    </div>
     </section>
 </body>
 </html> 
