--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <div class="estudante-todos">
-        <span></span>
+        <span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
             <h3 class="estudante-nome">Gabriel</h3>
@@ -35,6 +35,43 @@
             <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
             <img class="estudante-icone" src="ring.jpg" alt="RING!">
         </div>
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+        <h3 class="estudante-nome">Gabriel</h3>
+        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+        <img class="estudante-icone" src="ring.jpg" alt="RING!">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+        <h3 class="estudante-nome">Gabriel</h3>
+        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+        <img class="estudante-icone" src="ring.jpg" alt="RING!">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+        <h3 class="estudante-nome">Gabriel</h3>
+        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+        <img class="estudante-icone" src="ring.jpg" alt="RING!">
+    </div>
+    <span></span>
+    <span></span>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+        <h3 class="estudante-nome">Gabriel</h3>
+        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+        <img class="estudante-icone" src="ring.jpg" alt="RING!">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+        <h3 class="estudante-nome">Gabriel</h3>
+        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+        <img class="estudante-icone" src="ring.jpg" alt="RING!">
     </div>
     </section>
 </body>
