--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
             <h3 class="estudante-nome">Gabriel</h3>
-            <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <a href=""></a><img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
             <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
             <img class="estudante-icone" src="ring.jpg" alt="RING!">
         </div>
     </div>
+    
     <div class="estudante-div">
         <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
         <h3 class="estudante-nome">Gabriel</h3>
