--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
             <h3 class="estudante-nome">Gabriel</h3>
-            <a href=""></a><img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <a href="https://github.com/gabrielrufinodossantos"><img class="estudante-icone" src="ui.png" alt="algum icone aleatório"></a>
             <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
             <img class="estudante-icone" src="ring.jpg" alt="RING!">
         </div>
