--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
             <h3 class="estudante-nome">Gabriel</h3>
             <a href="https://github.com/gabrielrufinodossantos"><img class="estudante-icone" src="ui.png" alt="algum icone aleatório"></a>
-            <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+            <a href="https://www.instagram.com/gabrielrufinosantos01/"></a><img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
             <img class="estudante-icone" src="ring.jpg" alt="RING!">
         </div>
     </div>
