--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
             <h3 class="estudante-nome">Gabriel</h3>
-            <a href="https://github.com/gabrielrufinodossantos"><img class="estudante-icone" src="ui.png" alt="algum icone aleatório"></a>
-            <a href="https://www.instagram.com/gabrielrufinosantos01/"><img class="estudante-icone" src="sonic spin.png" alt="super sonc style"></a>
+            <a href="https://github.com/gabrielrufinodossantos"><img class="estudante-icone" src="ui.png" alt="github"></a>
+            <a href="https://www.instagram.com/gabrielrufinosantos01/"><img class="estudante-icone" src="sonic spin.png" alt="instagram"></a>
             <img class="estudante-icone" src="ring.jpg" alt="RING!">
         </div>
     </div>
