--- a/index.html
+++ b/index.html
@@ -28,52 +28,57 @@
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <div class="estudante-todos">
         <span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+                <h3 class="estudante-nome">Gabriel</h3>
+                <a href="https://github.com/gabrielrufinodossantos"><img class="estudante-icone" src="ui.png" alt="github"></a>
+                <a href="https://www.instagram.com/gabrielrufinosantos01/"><img class="estudante-icone" src="sonic spin.png" alt="instagram"></a>
+                <img class="estudante-icone" src="ring.jpg" alt="RING!">
+            </div>
+        </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
             <h3 class="estudante-nome">Gabriel</h3>
-            <a href="https://github.com/gabrielrufinodossantos"><img class="estudante-icone" src="ui.png" alt="github"></a>
-            <a href="https://www.instagram.com/gabrielrufinosantos01/"><img class="estudante-icone" src="sonic spin.png" alt="instagram"></a>
+            <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
             <img class="estudante-icone" src="ring.jpg" alt="RING!">
         </div>
-    </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-        <h3 class="estudante-nome">Gabriel</h3>
-        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
-        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
-        <img class="estudante-icone" src="ring.jpg" alt="RING!">
-    </div>
 
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-        <h3 class="estudante-nome">Gabriel</h3>
-        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
-        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
-        <img class="estudante-icone" src="ring.jpg" alt="RING!">
-    </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-        <h3 class="estudante-nome">Gabriel</h3>
-        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
-        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
-        <img class="estudante-icone" src="ring.jpg" alt="RING!">
-    </div>
-    <span></span>
-    <span></span>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-        <h3 class="estudante-nome">Gabriel</h3>
-        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
-        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
-        <img class="estudante-icone" src="ring.jpg" alt="RING!">
-    </div>
-    <div class="estudante-div">
-        <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-        <h3 class="estudante-nome">Gabriel</h3>
-        <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
-        <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
-        <img class="estudante-icone" src="ring.jpg" alt="RING!">
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+            <h3 class="estudante-nome">Gabriel</h3>
+            <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+            <img class="estudante-icone" src="ring.jpg" alt="RING!">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+            <h3 class="estudante-nome">Gabriel</h3>
+            <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+            <img class="estudante-icone" src="ring.jpg" alt="RING!">
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+            <h3 class="estudante-nome">Gabriel</h3>
+            <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+            <img class="estudante-icone" src="ring.jpg" alt="RING!">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
+            <h3 class="estudante-nome">Gabriel</h3>
+            <img class="estudante-icone" src="ui.png" alt="algum icone aleatório">
+            <img class="estudante-icone" src="sonic spin.png" alt="super sonc style">
+            <img class="estudante-icone" src="ring.jpg" alt="RING!">
+        </div>
+
     </div>
     </section>
+    <footer class="rodape">
+        <img src="sonic titlle.jpg" alt="acho q foi">
+    </footer>
 </body>
 </html> 
