--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img src="sonic titlle.jpg" alt="acho q foi">
+        <img class="rodape-imagem" src="sonic titlle.jpg" alt="acho q foi">
     </footer>
 </body>
 </html> 
