--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="escola-texto-um">Acho que foi um</p>
             <p class="escola-texto-dois">Provavelmente foi dois</p>
         </div>
-        <img class="escola-imagem" src="sonic-teste.png" alt="sonic the hedgehog.">
+        <img class="escola-imagem" src="fundo transparente.png" alt="sonic the hedgehog.">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
