--- a/index.html
+++ b/index.html
@@ -2,42 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <title>Minha Página</title>
 </head>
-
 <body>
-    <header class="cabec">
-        <img class="cabec-imagem" src="gabriel escola.jpg" alt="start nesse trem">
-        <ul class="cabec-lista">
-            <li class="cabec-lista-item">Escola</li>
-            <li class="cabec-lista-item">Estudante</li>
-        </ul>
-    </header>
-    <section class="escola">
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">Acho que foi um</p>
-            <p class="escola-texto-dois">Provavelmente foi dois</p>
-        </div>
-        <img class="escola-imagem" src="fundo transparente.png" alt="sonic the hedgehog.">
-    </section>
-    <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <div class="estudante-todos">
-        <span>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="izuku.jpg" alt="tava animado na hora">
-                <h3 class="estudante-nome">Gabriel</h3>
-                <a href="https://github.com/gabrielrufinodossantos"><img class="estudante-icone" src="ui.png" alt="github"></a>
-                <a href="https://www.instagram.com/gabrielrufinosantos01/"><img class="estudante-icone" src="sonic spin.png" alt="instagram"></a>
-                <img class="estudante-icone" src="ring.jpg" alt="RING!">
-            </div>
-    </section>
-    <footer class="rodape">
-        <img class="rodape-imagem" src="sonic titlle.jpg" alt="acho q foi">
-    </footer>
+    <div class="menu"><p class="menu-texto">Duque - Trilha</p>
+    </div>
+    <div class="cabecalho"></div>
+    <div class="corpo"></div>
+    <div class="rodape"></div>
 </body>
-</html> 
+</html>
