--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <div class="menu"><p class="menu-texto">Duque - Trilha</p>
     </div>
-    <div class="cabecalho"></div>
+    <div class="cabecalho"><img class="cebecalho-img" src="WhatsApp Image 2023-05-25 at 16.35 1.png">
+        <p class="cabecalho-texto">Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
+            e gostaria de dizer aqui que estou feliz em te
+            conhecer e queria que soubesse de uma coisa que é o fato de que eu pretendo quebrar o meu limitador e me tornar um desenhista conhecido no mundo todo.</p></div>
     <div class="corpo"></div>
     <div class="rodape"></div>
 </body>
