--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <div class="corpo"><img class="corpo-img" src="trabalho de escola 1.png">
         <div class="corpo"><img class="corpo-img" src="viagem de carro 1.png">
     </div>
-    <div class="rodape"></div>
+    <div class="rodape"><p class="rodapé">
+        <p class="rodapé-texto">o amor é como uma flor roxa
+            que nasce no coração dos trouxas.
+            
+            ela  cresce e vira galho
+            na cabeça dos otários.
+    </p></div>
 </body>
 </html>
