--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="menu"><p class="menu-texto">Duque - Trilha</p>
+    <a href="https://profpatlopes.github.io/premenii/trilha" target="_blank"><font color="white">Duque - Trilha</font></a>
     </div>
     <div class="cabecalho"><img class="cebecalho-img" src="WhatsApp Image 2023-05-25 at 16.35 1.png">
         <p class="cabecalho-texto">Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
@@ -22,9 +23,15 @@
     <div class="rodape"><p class="rodapé">
         <p class="rodapé-texto">o amor é como uma flor roxa
             que nasce no coração dos trouxas.
-            
+
             ela  cresce e vira galho
             na cabeça dos otários.
     </p></div>
 </body>
 </html>
+<head>
+    <link rel="stylesheet" type="text/css" href="estilo.css" media="screen">
+    <link rel="shortcut icon" href="Gabriel Rufino Dos Santos.webp" type="image/x-i   con">
+    <title>Minha Página</title>
+    
+</head>
