--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="menu"><p class="menu-texto">Duque - Trilha</p>
     <a href="https://profpatlopes.github.io/premenii/trilha" target="_blank"><font color="white">Duque - Trilha</font></a>
     </div>
-    <div class="cabecalho"><img class="cebecalho-img" src="WhatsApp Image 2023-05-25 at 16.35 1.png">
+    <div class="cabecalho"><img class="cebecalho-img" src="Gabriel Rufino Dos Santos.jpeg">
         <p class="cabecalho-texto">Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
             e gostaria de dizer aqui que estou feliz em te
             conhecer e queria que soubesse de uma coisa que é o fato de que eu pretendo quebrar o meu limitador e me tornar um desenhista conhecido no mundo todo.</p></div>
@@ -31,7 +31,7 @@
 </html>
 <head>
     <link rel="stylesheet" type="text/css" href="estilo.css" media="screen">
-    <link rel="shortcut icon" href="Gabriel Rufino Dos Santos.webp" type="image/x-i   con">
+    <link rel="shortcut icon" href="Gabriel Rufino Dos Santos.jpeg" type="image/x-i   con">
     <title>Minha Página</title>
     
 </head>
