--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Minha Página</title>
 </head>
 <body>
-    <div class="menu"><p class="menu-texto">Duque - Trilha</p>
-    <a href="https://profpatlopes.github.io/premenii/trilha" target="_blank"><font color="white">Duque - Trilha</font></a>
+    <div class="menu"><p class="menu-texto"><a href="https://profpatlopes.github.io/premenii/trilha" target="_blank"><font color="white">Duque - Trilha</font></a></p>
     </div>
     <div class="cabecalho"><img class="cebecalho-img" src="Gabriel Rufino Dos Santos.jpeg">
         <p class="cabecalho-texto">Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
