--- a/index.html
+++ b/index.html
@@ -12,12 +12,25 @@
         <p class="cabecalho-texto">Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
             e gostaria de dizer aqui que estou feliz em te
             conhecer e queria que soubesse de uma coisa que é o fato de que eu pretendo quebrar o meu limitador e me tornar um desenhista conhecido no mundo todo.</p></div>
-         <class="corpo"><img class="corpo-img" src="jooj 1.png">
-         <class="corpo"><img class="corpo-img" src="caminhando 1.png">
-         <class="corpo"><img class="corpo-img" src="leirtura 1.png">
-         <class="corpo"><img class="corpo-img" src="dormir 1.png">
-         <class="corpo"><img class="corpo-img" src="trabalho de escola 1.png">
-         <class="corpo"><img class="corpo-img" src="viagem de carro 1.png">
+            <div class="corpo">
+                <div class="corpo-itens"><img class="corpo-itens-img" src="trabalho de escola 1.png">
+            <h3 class="corpo-itens-descricao-nome">Desenhar</h3>
+            </div> 
+            <div class="corpo-itens"><img class="corpo-itens-img" src="jooj 1.png">
+            <h3 class="corpo-itens-descricao-nome">Jogar/Jooj</h3>
+            </div> 
+            <div class="corpo-itens"><img class="corpo-itens-img" src="dormir 1.png">
+            <h3 class="corpo-itens-descricao-nome">Dormir</h3>
+            </div> 
+            <div class="corpo-itens"><img class="corpo-itens-img" src="caminhando 1.png">
+            <h3 class="corpo-itens-descricao-nome">Caminhada</h3>
+            </div> 
+            <div class="corpo-itens"><img class="corpo-itens-img" src="viagem de carro 1.png">
+            <h3 class="corpo-itens-descricao-nome">viagenzinha</h3>
+            </div> 
+            <div class="corpo-itens"><img class="corpo-itens-img" src="leirtura 1.png">
+            <h3 class="corpo-itens-descricao-nome">leitura de HQ'S/MANGAS</h3>
+            </div>  
     <div class="rodape"><p class="rodapé">
         <p class="rodapé-texto">o amor é como uma flor roxa
             que nasce no coração dos trouxas.
