--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div class="menu"><p class="menu-texto"><a href="https://profpatlopes.github.io/premenii/trilha" target="_blank"><font color="white">Duque - Trilha</font></a></p>
     </div>
     <div class="cabecalho"><img class="cebecalho-img" src="Gabriel Rufino Dos Santos_clipdrop-background-removal.png">
-        <p class="cabecalho-texto">Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
+        <p class="cabecalho-texto 1">Opa
+            <p class="cabecalho-texto 2"> Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
             e gostaria de dizer aqui que estou feliz em te
             conhecer e queria que soubesse de uma coisa que é o fato de que eu pretendo quebrar o meu limitador e me tornar um desenhista conhecido no mundo todo.</p></div>
             <div class="corpo">
