--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Minha Página</title>
 </head>
 <body>
-    <div class="menu"><p class="menu-texto"><a href="https://profpatlopes.github.io/premenii/trilha" target="_blank"><font color="white">Duque - Trilha</font></a></p>
+    <div class="menu"><p class="menu-texto"><a href="https://profpatlopes.github.io/duque23/trilha" target="_blank"><font color="white">Duque - Trilha</font></a></p>
     </div>
     <div class="cabecalho"><img class="cebecalho-img" src="Gabriel Rufino Dos Santos_clipdrop-background-removal.png">
         <p class="cabecalho-texto1">Opa
