--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="menu"><p class="menu-texto"><a href="https://profpatlopes.github.io/duque23/trilha" target="_blank"><font color="white">Duque - Trilha</font></a></p>
     </div>
-    <div class="cabecalho"><img class="cebecalho-img" src="Gabriel Rufino Dos Santos_clipdrop-background-removal.png">
+    <div class="cabecalho"><img class="cabecalho-img" src="Gabriel Rufino Dos Santos_clipdrop-background-removal.png">
         <p class="cabecalho-texto1">Opa
             <p class="cabecalho-texto2"> Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
             e gostaria de dizer aqui que estou feliz em te
