--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <div class="cabecalho"><img class="cabecalho-img" src="Gabriel Rufino Dos Santos_clipdrop-background-removal.png">
         <p class="cabecalho-texto1">Opa
             <p class="cabecalho-texto2"> Eai,sou eu aqui, o seu velho amigo Gabriel Rufino.
-            e gostaria de dizer aqui que estou feliz em te
-            conhecer e queria que soubesse de uma coisa que é o fato de que eu pretendo quebrar o meu limitador e me tornar um desenhista conhecido no mundo todo.</p></div>
+            Gostaria de dizer aqui que estou feliz em te conhecer e queria que soubesse de uma coisa que é o fato de que eu pretendo quebrar o meu limitador e me tornar um desenhista conhecido no mundo todo.</p></div>
             <div class="corpo">
                 <div class="corpo-itens"><img class="corpo-itens-img" src="trabalho de escola 1.png">
             <h3 class="corpo-itens-descricao-nome">Desenhar</h3>
